css/site.css
body {

    /* CSS3 gradient obtained from https://codepen.io/fox_hover/pen/KgwYJy */
    background: 
    radial-gradient(transparent 3px, transparent 4px),
    radial-gradient(transparent 3px, transparent 4px),
    linear-gradient(#e0e0e0 4px, transparent 0),
    linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
    linear-gradient(-45deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
  #e0e0e0;
    background-size: 109px 109px, 109px 109px,100% 6px, 109px 109px, 109px 109px;
     background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;

    margin: 0;
    padding: 0;
    font-family: 'Work Sans';
}

p, ul { line-height:25px; text-align: justify; padding: 0}
a, a:visited, a:active { text-decoration: none; color: #0074D9; transition: color 0.4s;}
a:hover { color: #001f3f; }

.hidden { display: none !important; }
.opacity-1 { opacity: 1; }
.opacity-0 { opacity: 0; }

.main-container {
    background-color: #ffffff;
    margin: auto;
    width: 70%;
    border-left: 1px solid #000;
    border-right: 1px solid #000;
    display: flex;
    overflow-x: hidden;
}


#landing-container {
    display: flex;
    flex-direction: column;
    margin: auto;
    height: 100vh;
    justify-content: center;
}

.landing-img {
    width: 200px;
    height: 200px;
    margin: 0px auto;
    display: none;
}

.landing-link, .landing-link:visited, .landing-link:active { color: #004287; }
.landing-link:hover { color: #0074D9; }

.name-and-info {
    display: flex;
    margin-bottom: 20px;
}

#name-big {
    align-self: center;
    font-size: 85px;
    line-height: 65px;
    margin-right: 40px;
    opacity: 0;
    transform: translateX(-50%);

    -webkit-transition: opacity 1s, transform 1s;
    -moz-transition: opacity 1s, transform 1s;
    transition: opacity 1s, transform 1s;
}

.name-half {
    text-align: right;
}

#info-big {
    font-size: 35px;
    align-self: center;
    display: flex;
    flex-direction: column;
    margin-left: 40px;
}

#info-big a, #info-big span {
    opacity: 0;
    transition: opacity 2s;
}

#jtitle-wrapper{
    border-top: 1px solid black;
    font-size: 40px;
    width: 0%;
    height: 0px;
    opacity: 0;
    align-self: center;
    text-align: center;
    padding-top: 10px;

    transition: width 1s, opacity 1s;
}


#jtitle {
    opacity: 0;
    height: 0px;
    transition: opacity 1s, height 1s;
}

#info-page-container {
    height: inherit;
}

.page-header {
    display: grid;
    align-items: center;
    height: 50px;
    border-bottom: 1px solid black;
}

.header-fixed-border {
    position: fixed;
    display: grid;
    height: 68px;
    width: 70%;
    border-bottom: 3px solid black;
    grid-template-columns: auto 100px auto;
    z-index: 2; 
    pointer-events: none;
}

.header-icon {
    grid-column: 2;
}

.header-contents {
    position: fixed;
    display: inline-grid;
    width: 70%;
    height: 68px;
    background-color: white;
}

.header-name {
    grid-row: 1;
    margin-left: 12px;
    font-size: 36px;
    align-self: center;
}

.contact-container {
    height: inherit;
    grid-row: 1;
    display: flex;
    justify-self: end;
    justify-items: center;
}

.icon-wrapper {
    border-left: 1px solid black;
    height: inherit;
    vertical-align: center;
}

.icon-wrapper:hover {
    background: #ededed;
    cursor: pointer;
}

.contact-icon {
    width: 32px;
    height: 32px;
    margin: 16px 9px;
}

.detailed-info-container {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-auto-rows: auto;
    margin-top: 68px;
}

.section-header {
    display: grid;
    grid-template-columns: auto max-content auto;
}

.header-col-1 { grid-column: 1;}
.header-col-2 { 
    padding: 0px 5px;
    grid-column: 2;
    font-size: 25px;
    font-weight: bold;
}
.header-col-3 { grid-column: 3;}

.section-header {
    margin-bottom: 30px;
}

.section-header span:nth-child(odd) {
    border-top: 1px solid #474747;
    height: 1px;
    align-self: center;
}

.profile-section {
    margin: 30px 40px;
    grid-column: 1;
    grid-row: 1;
}

.skills-section {
    margin: 30px 40px;
    display: flex;
    align-items: center;
    grid-column: 2;
    grid-row: 1;
}

.skills-wrapper {
    display: flex;
    flex-direction: column;
    align-self: center;
}

.skill-category {
   display: grid;
   grid-template-columns: 52px auto; 
   grid-column-gap: 10px;
   margin: 5px 10px; 
}

.skill-category-icon {
    width: 52px;
    height: 52px;
    grid-column: 1;
    grid-row: 1 / span 2;
}

.skill-category-header {
    font-weight: bold;
    align-self: end;
}

.skill-list {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.skill-list li {
    float: left;
    margin-right: 5px;
}

.projects-section {
    margin: 30px 40px;
    grid-column: 1/ span 2;
    grid-row: 2;
}

.projects-container {
    display: flex;
    flex-wrap: wrap;
}

.project-title {
    text-align: center;
    font-size: 23px;
    margin-bottom: 25px;
    font-weight: bold;
}

.project {
    display: flex;
    flex-direction: column;
    width:100%;
    margin-bottom: 20px;
}

.prj-1 { grid-column: 1;}
.prj-2 { grid-column: 2;}

.project-gallery {
    display: flex;
    justify-content: center;
    background: rgb(41, 41, 41);
    padding: 5px;
}

.project-img {
    max-width: 100%;
    height: auto;    
}

.footer-section {
    border-top: 1px solid black;
    grid-column: 1 / span 2;
    padding: 15px 0px;
    text-align: center;
}

/* MEDIA QUERIES GO UNDER HERE */
/* 1024px wide */
@media only screen and (max-width: 1025px) {
    .detailed-info-container, .projects-container {
        display: flex;
        flex-direction: column;
    }

    .detailed-info-container {
        margin-top: 78px;
    }

    .header-name {
        font-size: 3.5vw;
    }

    .skills-wrapper { width: 100%; }

    .skill-list { text-align: center;}
    .skill-list li { float: none; margin: 0;}

    .skill-category {
        grid-template-columns: auto;
        grid-row-gap: 5px;
        justify-content: center;
        justify-items: center;
        width: 100%;
        padding: 6px 0px;
        margin: 6px 0px;
        border-left: 1px solid black;
        border-right: 1px solid black;
        background: #ededed;
    }
} 

@media only screen and (max-width: 676px) {
    .main-container, .header-fixed-border, .header-contents { width: 100%; }

    .header-name { font-size: 4vw; }

    .contact-icon {
        width: 26px;
        height: 26px;
        margin: 20px 7px;
    }

    #jtitle, #info-big { font-size: 5vw; }

    #name-big {
        font-size: 14vw;
        line-height: 10vw;
    }

    .landing-img {
        width: 28vw;
        height: 28vw;
        max-width: 200px;
        max-height: 200px;
    }

    .name-and-info {
        margin: 0;
    }
}

@media only screen and (max-width: 1380px) {
    .name-and-info {
        flex-direction: column;
    }
    
    #name-big {
        margin: 0;
        padding: 19px 0px;
        border-bottom: 1px solid black;
    }

    .name-half, #info-big {
        text-align: center;
    }

    #info-big {
        margin: 15px 0px;
    }

    .landing-img {
        display: block;
    }
}

@media only screen and (min-width: 1920px) {
    #info-big { font-size: 2vw; }
    #name-big { font-size: 5vw; line-height: 4vw;}
    #jtitle { font-size: 2vw; }
}

